--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizzy V2 - Fun AI-powered Learning, Made Personal!</title>
+    <title>Quizzy - Fun AI-powered Learning, Made Personal!</title>
   </head>
   <body>
     <div id="root"></div>
